Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@ joints.  It has the following features:</p>
 <li>pyRouterJog is licensed under the GPL, so that you're free to use and modify it.</li>
 </ul>
 
+<p>[[Installation|installation-ref]]</p>
+
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
