Added config and cleaned up index.

--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+---
+---
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
@@ -28,11 +30,16 @@ joints.  It has the following features:</p>
 <ul>
 <li>Creates templates for the <a href="http://www.incra.com/router_table_fences-ls_positiners.html">Incra LS Positioner fence</a>.  In fact, this was the original motivation for writing pyRouterJig.</li>
 <li>Support for both English and metric unit systems.  Currently, only English units have been tested, in part because my LS Positioner is the English version. </li>
-<li>May be customized for any finger (box joint) or pin / tail (dovetail) spacing pattern.  Currently, two patterns are included ("Equally spaced" and "Variable spaced"), which will be described below.</li>
+<li>May be customized for any finger (box joint) or pin / tail (dovetail) spacing pattern.  Currently, two patterns are included ("Equally spaced" and "Variable spaced").</li>
 <li>pyRouterJog is licensed under the GPL, so that you're free to use and modify it.</li>
 </ul>
 
-<p>[[Installation|installation-ref]]</p>
+<h3><a id="additional-info" class="anchor" href="#additional-info"
+   aria-hidden="true"><span class="octicon octicon-link"></span></a>Additional Information</h3>
+
+<p><a href="{{ site.url }}/installation.html">Installation</a></p>
+<p><a href="{{ site.url }}/documentation.html">Documentation</a></p>
+<p><a href="{{ site.url }}/license.html">License</a></p>
 
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
@@ -41,8 +48,6 @@ joints.  It has the following features:</p>
 
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/lowrie/pyRouterJig">pyRouterJig</a> is maintained by <a href="https://github.com/lowrie">lowrie</a>.</span>
