--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ joints.  It has the following features:</p>
 <li>Creates templates for the <a href="http://www.incra.com/router_table_fences-ls_positiners.html">Incra LS Positioner fence</a>.  In fact, this was the original motivation for writing pyRouterJig.</li>
 <li>Support for both English and metric unit systems.  Currently, only English units have been tested, in part because my LS Positioner is the English version. </li>
 <li>May be customized for many finger (box joint) or pin / tail (dovetail) spacing patterns.  Currently, two patterns are included ("Equally spaced" and "Variable spaced").</li>
-<li>pyRouterJog is licensed under the GPL, so that you're free to use and modify it.</li>
+<li>pyRouterJig is licensed under the GPL, so that you're free to use and modify it.</li>
 </ul>
 
 <h3><a id="opening-screenshot" class="anchor" href="#opening-screenshot"
