Doc updates for v0.3.0

--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
     <section class="page-header">
       <h1 class="project-name">pyRouterJig</h1>
       <h2 class="project-tagline">pyRouterJig is a woodworking layout tool for creating box and dovetail joints</h2>
-      <a href="https://github.com/lowrie/pyRouterJig" class="btn">View on GitHub</a>
-      <a href="https://github.com/lowrie/pyRouterJig/zipball/master" class="btn">Download .zip</a>
-      <a href="https://github.com/lowrie/pyRouterJig/tarball/master" class="btn">Download .tar.gz</a>
+      <h3 class="project-tagline">Version 0.3.0 now available!</h2>
+      <a href="https://github.com/lowrie/pyRouterJig/releases/download/v0.3.0/pyRouterJig.app.zip" class="btn">Mac .app</a>
+      <a href="https://github.com/lowrie/pyRouterJig/releases/download/v0.3.0/pyRouterJig.exe" class="btn">Windows .exe</a>
+      <a href="https://github.com/lowrie/pyRouterJig" class="btn">View on GitHub (source code)</a>
     </section>
 
     <section class="main-content">
