More doc updates for v0.3.0

--- a/index.html
+++ b/index.html
@@ -16,9 +16,16 @@
       <h1 class="project-name">pyRouterJig</h1>
       <h2 class="project-tagline">pyRouterJig is a woodworking layout tool for creating box and dovetail joints</h2>
       <h3 class="project-tagline">Version 0.3.0 now available!</h2>
-      <a href="https://github.com/lowrie/pyRouterJig/releases/download/v0.3.0/pyRouterJig.exe" class="btn">Download for Windows</a>
-      <a href="https://github.com/lowrie/pyRouterJig/releases/download/v0.3.0/pyRouterJig.app.zip" class="btn">Download for Mac</a>
-      <a href="https://github.com/lowrie/pyRouterJig" class="btn">View on GitHub (source code)</a>
+      <p>
+        <a href="https://github.com/lowrie/pyRouterJig/releases/download/v0.3.0/pyRouterJig.exe" class="btn">Download for Windows</a>
+        <a href="https://github.com/lowrie/pyRouterJig/releases/download/v0.3.0/pyRouterJig.app.zip" class="btn">Download for Mac</a>
+        <a href="https://github.com/lowrie/pyRouterJig" class="btn">View on GitHub (source code)</a>
+      </p>
+      <p>
+        <a href="{{ site.baseurl }}/installation.html" class="btn">Installation</a>
+        <a href="{{ site.baseurl }}/documentation.html" class="btn">Documentation</a>
+        <a href="{{ site.baseurl }}/license.html" class="btn">License</a>
+      </p>
     </section>
 
     <section class="main-content">
