account for images move

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ joints.  It has the following features:</p>
 
 Below is the opening screen shot of pyRouterJig.  The cursor is over
 the <b>Bit Width</b> text box, showing a tooltip for that input paramter.
-<img src="opening_screen_shot.png" alt="Opening screenshot with tooltip on Bit Width">
+<img src="images/opening_screen_shot.png" alt="Opening screenshot with tooltip on Bit Width">
 
 <h3><a id="additional-info" class="anchor" href="#additional-info"
    aria-hidden="true"><span class="octicon octicon-link"></span></a>Additional Information</h3>
